--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,5 @@
 .bg-color{
-    background: linear-gradient(120deg, #df42b1 0%, #505add 100%);
+    background: linear-gradient(120deg, #151853 0%, #151853 100%);
 }
 .bannerbtn{
   background: linear-gradient(120deg, #df4264 0%, #505add 100%);
